--- a/FamilyRecipesApp/Server/FamilyRecipesApp.Server.csproj
+++ b/FamilyRecipesApp/Server/FamilyRecipesApp.Server.csproj
@@ -22,5 +22,10 @@
     <ProjectReference Include="..\Shared\FamilyRecipesApp.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="recipe.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+</ItemGroup>
 
 </Project>
